# lys

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
docs/: ADVANCED_PATTERNS.md
docs/FRS/: README.md  auth.md  emails_and_notifications.md  internal_service_communication.md  jwt_permissions.md  organization_permissions.md  webservice_management.md
docs/guides/: creating-an-app.md  emails-and-notifications.md  entities-and-services.md  graphql-api.md  permissions.md
docs/todos/: SECURITY_AUDIT.md
src/lys/apps/ai/: __init__.py  tasks.py
src/lys/apps/base/: consts.py  middlewares.py  permission.py  permissions.py  tasks.py
src/lys/apps/licensing/: __init__.py  consts.py  errors.py  registries.py  tasks.py
src/lys/apps/organization/: abstracts.py  consts.py  permission.py  permissions.py
src/lys/apps/sso/: consts.py  errors.py
src/lys/apps/user_auth/: consts.py  errors.py  middlewares.py  permission.py  permissions.py  utils.py
src/lys/apps/user_role/: consts.py  errors.py  models.py  permission.py
src/lys/core/: celery_app.py  clis.py  configs.py  contexts.py  entities.py  errors.py  fixtures.py  middlewares.py  migrations.py  permissions.py  registers.py  registries.py  services.py
src/lys/core/abstracts/: email_address.py  webservices.py
src/lys/core/consts/: ai.py  component_types.py  environments.py  errors.py  permissions.py  plugins.py  tablenames.py  webservices.py
src/lys/core/graphql/: abstracts.py  client.py  connection.py  create.py  delete.py  edit.py  extensions.py  fields.py  getter.py  interfaces.py  nodes.py  registers.py  registries.py  subscription.py  types.py
src/lys/core/interfaces/: entities.py  fixtures.py  middlewares.py  permissions.py  services.py
src/lys/core/managers/: app.py  database.py  pubsub.py
src/lys/core/middlewares/: cors.py  error.py
src/lys/core/models/: __init__.py  configs.py  entities.py  fixtures.py  webservices.py
src/lys/core/strategies/: __init__.py  fixture_loading.py
src/lys/core/utils/: access.py  auth.py  database.py  datetime.py  decorators.py  generic.py  import_string.py  manager.py  models.py  routes.py  storage.py  strings.py  tool_generator.py  validators.py  webservice.py  zip.py
templates/emails/: _base.html
templates/emails/en/: license_granted.html  license_revoked.html  subscription_canceled.html  subscription_payment_failed.html  subscription_payment_success.html  translations.json  user_email_verification.html  user_invitation.html  user_password_reset.html
templates/emails/fr/: email_validation.html  forgotten_password.html  license_granted.html  license_revoked.html  subscription_canceled.html  subscription_payment_failed.html  subscription_payment_success.html  translations.json  update_email_warning.html  user_email_verification.html  user_invitation.html  user_password_reset.html  user_welcome.html
tests/: README.md  __init__.py  conftest.py  test_tool_generator.py
tests/e2e/: conftest.py
tests/e2e/apps/user_auth/: test_auth_webservices.py  test_middleware.py  test_user_webservices.py
tests/e2e/core/: test_graphql_schema.py
tests/fixtures/: __init__.py  database.py
tests/integration/: __init__.py  conftest.py  test_language_service.py
tests/integration/apps/ai/: conftest.py  test_conversation_service.py  test_feedback_service.py  test_message_service.py
tests/integration/apps/base/: test_emailing_service.py  test_log_service.py  test_one_time_token_service.py  test_webservice_service.py
tests/integration/apps/file_management/: conftest.py  test_file_import_service.py  test_stored_file_service.py
tests/integration/apps/licensing/: conftest.py  test_auth_service.py  test_checker_service.py  test_plan_service.py  test_rule_service.py  test_subscription_service.py
tests/integration/apps/organization/: conftest.py  test_auth_service.py  test_client_service.py  test_emailing_batch_service.py  test_notification_service.py  test_user_service.py
tests/integration/apps/sso/: test_sso_link_service.py
tests/integration/apps/user_auth/: test_auth_service.py  test_notification_service.py  test_user_service.py  test_webservice_service.py
tests/integration/apps/user_role/: conftest.py  test_auth_service.py  test_emailing_batch_service.py  test_role_service.py  test_user_service.py
tests/integration/core/: test_app_manager.py  test_database_manager.py  test_entity_service_extended.py
tests/mocks/: __init__.py  app_manager.py  utils.py
tests/unit/: __init__.py  conftest.py  test_isolation.py  test_mock_app_manager.py  test_service_with_mock.py
tests/unit/apps/ai/: test_ai_services_logic.py  test_config.py  test_conversation_consts.py  test_conversation_inputs.py  test_conversation_models.py  test_conversation_nodes.py  test_conversation_services.py  test_conversation_webservices.py  test_conversation_webservices_logic.py  test_graphql_executor.py  test_guardrails.py  test_local_executor.py  test_message_sanitizer.py  test_providers.py  test_service.py  test_tasks.py  test_text_improvement.py  test_text_improvement_inputs.py  (+2 more)
tests/unit/core/: test_app_manager.py  test_app_register.py  test_clis.py  test_configs.py  test_configs_logic.py  test_contexts.py  test_contexts_logic.py  test_database_manager_logic.py  test_database_utils.py  test_entities.py  test_errors.py  test_fixture_loading_logic.py  test_fixtures.py  test_generic_utils.py  test_graphql_abstracts_logic.py  test_graphql_client.py  test_graphql_create_logic.py  test_graphql_delete_logic.py  test_graphql_edit_logic.py  test_graphql_extensions_logic.py  test_graphql_nodes.py  test_graphql_nodes_logic.py  test_graphql_registries.py  test_graphql_subscription_logic.py  test_import_string.py  test_middlewares_logic.py  test_migrations.py  test_permissions_logic.py  test_pubsub_manager.py  test_registries.py  test_registries_advanced.py  test_registries_logic.py  test_routes_logic.py  test_services.py  test_services_logic.py  test_strings.py  test_tool_generator_logic.py  test_utils_logic.py  test_webservice_utils.py
(+465 files in other folders)
