[project]
name = "lys"
version = "0.0.1"
description = ""
authors = [
  { name="THEVENIN Anthony", email = "thevenin.anthony@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "asyncpg==0.30.0",
    "bcrypt==4.3.0",
    "celery[redis]==5.4.0",
    "dogpile.cache==1.4.0",
    "fastapi[all]==0.116.1",
    "psycopg2-binary==2.9.10",
    "pydantic[email]==2.11.7",
    "PyJWT==2.10.1",
    "sqlalchemy[asyncio]==2.0.43",
    "strawberry-graphql[fastapi]>=0.287.0",
    "graphene>=3.4.1",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-forked", "aiosqlite"]
mollie = ["mollie-api-python>=3.0.0"]
storage = ["aioboto3>=12.0.0"]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-forked",
    "aiosqlite",
    "mollie-api-python>=3.0.0",
    "aioboto3>=12.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Run unit tests before integration tests to avoid registry pollution.
# Integration tests load specific apps into the LysAppRegistry singleton,
# which can cause unit tests to fail if they run afterwards.
testpaths = ["tests/unit", "tests/integration"]
asyncio_mode = "strict"
markers = [
    "forked: mark test to run in a forked subprocess for isolation"
]

[tool.coverage.run]
source = ["src/lys"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    # External API adapters (require credentials/network, tested via mocks in unit tests)
    "*/apps/licensing/modules/mollie/*",
    "*/apps/ai/utils/providers/*",
    "*/core/utils/storage.py",
    # Celery worker setup (requires Redis/RabbitMQ broker)
    "*/core/celery_app.py",
    # Celery task definitions (thin wrappers, tested via mocks)
    "*/apps/*/tasks.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 35
show_missing = true