[project]
name = "runid-lys"
version = "0.5.0"
description = "A modular FastAPI framework for building GraphQL APIs with SQLAlchemy, featuring component-based architecture, JWT authentication, and multi-tenant permissions."
authors = [
  { name="THEVENIN Anthony", email = "labs@runid.fr" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13"
keywords = ["fastapi", "graphql", "sqlalchemy", "strawberry", "jwt", "multi-tenant", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "alembic>=1.15.0",
    "asyncpg==0.30.0",
    "bcrypt==4.3.0",
    "celery[redis]==5.4.0",
    "dogpile.cache==1.4.0",
    "fastapi[all]==0.116.1",
    "psycopg2-binary==2.9.10",
    "pydantic[email]==2.11.7",
    "PyJWT==2.10.1",
    "sqlalchemy[asyncio]==2.0.43",
    "strawberry-graphql[fastapi]>=0.287.0",
    "graphene>=3.4.1",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "authlib>=1.3.0",
    "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-forked", "aiosqlite", "fakeredis"]
mollie = ["mollie-api-python>=3.0.0"]
storage = ["aioboto3>=12.0.0"]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-forked",
    "aiosqlite",
    "fakeredis",
    "mollie-api-python>=3.0.0",
    "aioboto3>=12.0.0",
]

[project.urls]
Repository = "https://github.com/runid-labs/lys"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Run unit tests before integration tests to avoid registry pollution.
# Integration tests load specific apps into the LysAppRegistry singleton,
# which can cause unit tests to fail if they run afterwards.
testpaths = ["tests/unit", "tests/integration"]
asyncio_mode = "strict"
markers = [
    "forked: mark test to run in a forked subprocess for isolation"
]
filterwarnings = [
    "ignore::ResourceWarning",
    "ignore:Argument name-based matching of 'info' is deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = ["src/lys"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    # External API adapters (require credentials/network, tested via mocks in unit tests)
    "*/apps/licensing/modules/mollie/*",
    "*/apps/ai/utils/providers/*",
    "*/core/utils/storage.py",
    # Celery worker setup (requires Redis/RabbitMQ broker)
    "*/core/celery_app.py",
    # Celery task definitions (thin wrappers, tested via mocks)
    "*/apps/*/tasks.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 35
show_missing = true